tdf#146312 - Chapter numbering dialog: show paragraph style [None] in preview

Change-Id: Icb576df2f0de255aba9fdfddad81b654a48c6c36
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149948
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>